--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -350,3 +350,35 @@
             +pulse_btn
             width: 135px
             height: 44px
+
+.feedback
+    margin-top: 80px
+    margin-bottom: 50px
+    &__title
+        color: #0D0D0D
+        text-align: center
+        font-size: 30px
+        font-weight: 700
+        text-transform: uppercase
+    &__wrapper
+        margin-top: 60px
+        display: flex
+        justify-content: space-between
+        align-items: flex-start
+    &__info
+        margin-right: 60px
+        max-width: 686px
+    &__name
+        color: #0D0D0D
+        font-size: 18px
+        font-weight: 700
+        margin-bottom: 1px
+    &__score
+        margin-top: 0
+        color: #646464
+        font-size: 14px
+        font-weight: 500
+    &__text
+        +pulse_text
+        margin-top: 10px
+        font-size: 16px
