--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -8,7 +8,7 @@
     border: none
     border-radius: 5px
     cursor: pointer
-
+        
 @mixin pulse_link
     display: block
     color: $red
@@ -22,3 +22,17 @@
     color: #0D0D0D
     font-style: normal
     font-weight: 300
+
+@mixin pulse_form 
+    margin-top: 26px
+    input
+        width: 303px
+        height: 54px
+        margin-top: 10px
+        border-radius: 6px
+        padding-left: 20px
+        background-color: #fff
+        color: #4B4B4B
+        font-size: 14px
+        font-weight: 400
+        border: none
