--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -162,6 +162,12 @@
         display: flex
         flex-direction: column
         align-items: left
+        .error
+            color: $red
+            font-size: 12px
+            border: 1px solid $red
+        label.error
+            border: none
     &__btn
         +pulse_btn
         width: 303px
@@ -440,7 +446,7 @@
     transform: translate(-50%, -50%)
     padding: 35px 40px 40px 40px
     width: 382px
-    height: 402px
+    min-height: 402px
     background-color: #F2F2F2
     display: none
     &__close-icon
@@ -464,6 +470,13 @@
     &__form
         +pulse_form
         margin-top: 20px
+        .error
+            font-size: 12px
+            color: $red
+            border: 1px solid $red
+        label.error
+            border: none
+
 
 .modal_thanks
     position: absolute
