form sent to mail function

--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -162,19 +162,13 @@
         display: flex
         flex-direction: column
         align-items: left
-<<<<<<< HEAD
         .error
             color: $red
             font-size: 12px
             border: 1px solid $red
         label.error
             border: none
-<<<<<<< HEAD
             font-size: 12px
-=======
->>>>>>> parent of 363b36a (added form validation)
-=======
->>>>>>> parent of d671fb9 (added form sent to mail function)
     &__btn
         +pulse_btn
         width: 303px
@@ -453,7 +447,7 @@
     transform: translate(-50%, -50%)
     padding: 35px 40px 40px 40px
     width: 382px
-    height: 402px
+    min-height: 402px
     background-color: #F2F2F2
     display: none
     &__close-icon
@@ -477,16 +471,12 @@
     &__form
         +pulse_form
         margin-top: 20px
-<<<<<<< HEAD
         .error
             font-size: 12px
             color: $red
             border: 1px solid $red
         label.error
             border: none
-
-=======
->>>>>>> parent of 363b36a (added form validation)
 
 .modal_thanks
     position: absolute
@@ -495,7 +485,7 @@
     transform: translate(-50%, -50%)
     padding: 35px 40px 40px 40px
     width: 382px
-    height: 143px
+    min-height: 143px
     background-color: #F2F2F2
     display: none
 
