--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -489,3 +489,11 @@
     background-color: #F2F2F2
     display: none
 
+.page-up
+    position: fixed
+    right: 40px
+    bottom: 40px
+    width: 40px
+    height: 40px
+    img
+        width: 100%
